updated methods and add class